--- a/mysite.css
+++ b/mysite.css
@@ -22,6 +22,10 @@ header {
 	height: 70px;
 }
 
+.img1 {
+	height: 70px;
+	width: 156px;
+}
 .nav-list {
 	float: right;
 }
@@ -170,13 +174,21 @@ header {
 	padding-right: 10px;
 }
 
+.strength3 {
+	width: 320px;
+	float: left;
+}
+
 .strength {
 	padding-bottom: 90px;
 }
 
 .size {
 	font-size: 5rem;
+	margin-left: 120px;
 }
+
+
 
 .sub-title {
 	font-size: 20px;
@@ -188,7 +200,6 @@ header {
 .profile {
 	width: 1024px;
 	margin: 0 auto;
-	padding-bottom: 90px;
 }
 
 .title4 {
@@ -208,16 +219,17 @@ header {
 
 .yoko {
 	padding-top: 30px;
-	margin-bottom: 90px;
 }
 
 .picture {
 	width: 512px;
 	float:left;
+	padding-bottom: 90px;
 }
 
 .man {
 	border-radius: 250px;
+	margin-left: 150px;
 }
 
 .right {
@@ -323,4 +335,263 @@ footer {
 	color: #FAFAFA;
 	text-align: center;
 	line-height: 60px;
+}
+
+#nav-drawer {
+  float: right;
+  line-height: 50px;
+}
+
+/*チェックボックス等は非表示に*/
+.nav-unshown {
+  display:none;
+}
+
+/*アイコンのスペース*/
+#nav-open {
+  display: inline-block;
+  width: 30px;
+  height: 22px;
+  vertical-align: middle;
+}
+
+/*ハンバーガーアイコンをCSSだけで表現*/
+#nav-open span, #nav-open span:before, #nav-open span:after {
+  position: absolute;
+  height: 3px;/*線の太さ*/
+  width: 25px;/*長さ*/
+  border-radius: 3px;
+  background: #555;
+  display: block;
+  content: '';
+  cursor: pointer;
+}
+#nav-open span:before {
+  bottom: -8px;
+}
+#nav-open span:after {
+  bottom: -16px;
+}
+
+/*閉じる用の薄黒カバー*/
+#nav-close {
+  display: none;/*はじめは隠しておく*/
+  position: fixed;
+  z-index: 99;
+  top: 0;/*全体に広がるように*/
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 0;
+  transition: .3s ease-in-out;
+}
+
+/*中身*/
+#nav-content {
+  overflow: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;/*最前面に*/
+  width: 90%;/*右側に隙間を作る（閉じるカバーを表示）*/
+  max-width: 330px;/*最大幅（調整してください）*/
+  height: 100%;
+  background: #fff;/*背景色*/
+  transition: .3s ease-in-out;/*滑らかに表示*/
+  -webkit-transform: translateX(-105%);
+  transform: translateX(-105%);/*左に隠しておく*/
+}
+
+/*チェックが入ったらもろもろ表示*/
+#nav-input:checked ~ #nav-close {
+  display: block;/*カバーを表示*/
+  opacity: .5;
+}
+
+#nav-input:checked ~ #nav-content {
+  -webkit-transform: translateX(0%);
+  transform: translateX(0%);/*中身を表示（右へスライド）*/
+  box-shadow: 6px 0 25px rgba(0,0,0,.15);
+}
+
+@media screen and (min-width:767px) {
+  #nav-open {
+    display:none;
+  }
+}
+
+
+@media screen and (max-width: 767px) {
+
+	body {
+		width: 90%;
+		margin: 0 auto;
+	}
+
+	header {
+		height: 50px;
+	}
+
+	.container {
+		width: 100%;
+		height: 50px;
+	}
+
+	.img1 {
+		height: 50px;
+		width: 120px;
+	}
+
+	.nav-list{
+		display: none;
+	}
+
+	.main-visual {
+		height: 650px;
+		background-image: url(img/code.png);
+		background-position: center;
+		background-size: cover;
+		margin: 0 auto;
+	}
+
+	.title {
+		padding-top: 200px;
+		font-size: 40px;
+		color: #FAFAFA;
+	}
+
+	.textm{
+		font-size: 18px;
+		padding-top: 10px;
+	}
+
+	.portfolio {
+		width: 100%;
+	}
+
+	.title2 {
+		padding-top: 90px;
+		font-size: 32px;
+		color: #000;
+		padding-bottom: 8px;
+		text-align: center;
+	}
+
+	.color {
+		padding-bottom: 90px;
+	}
+
+
+	.img {
+		width: 300px;
+		height: 250px;
+		float: none;
+	}
+
+	.img:nth-child(1),
+	.img:nth-child(3),
+	.img:nth-child(5) {
+		display: none;
+	}
+
+	.img:nth-child(2),
+	.img:nth-child(4),
+	.img:nth-child(6) {
+		margin: 0 auto;
+	}
+
+	.img:nth-child(2),
+	.img:nth-child(4) {
+		margin-bottom: 10px;
+	}
+
+	.feature {
+		width: 100%;
+	}
+
+	.strength {
+		float: none;
+	}
+
+	.strength1 {
+		float: none;
+		margin: 0 auto;
+		margin-top: 30px;
+	}
+
+	.strength2 {
+		float: none;
+		margin: 0 auto;
+		margin-top: 30px;
+	}
+
+	.strength3 {
+		float: none;
+		margin: 0 auto;
+		margin-top: 30px;
+	}
+
+	.size {
+		width: 100%;
+		margin: 0 auto;
+	}
+
+	.profile {
+		width: 100%;
+	}
+
+	.picture {
+		float: none;
+		margin:0 auto;
+		width: 100%;
+	}
+
+	.man {
+		margin-left: 100px;
+	}
+
+	.right {
+		width: 100%;
+		float: none;
+		margin: 0 auto;
+	}
+
+	.mynamewright {
+		text-align: center;
+		padding-top: 20px;
+	}
+
+	.text5 {
+		text-align: center;
+	}
+
+	.MySkills {
+		text-align: center;
+	}
+
+	.contact {
+		width: 100%;
+	}
+
+	.left {
+		float: none;
+	}
+
+	.right2 {
+		float: none;
+	}
+
+	.icon {
+		padding-left: 30px;
+	}
+
+	footer {
+		width: 100%;
+	}
+
+	.size {
+		margin-left: 120px;
+	}
+
 }
