--- a/mysite.css
+++ b/mysite.css
@@ -311,6 +311,7 @@ header {
 
 .num {
 	text-align: center;
+	padding-bottom: 20px;
 }
 
 .sns {
@@ -320,9 +321,8 @@ header {
 }
 
 .icon {
-	font-size: 3rem;
+	font-size: 50px;
 	text-align: center;
-	padding-right: 20px;
 }
 
 footer {
@@ -338,105 +338,54 @@ footer {
 	line-height: 60px;
 }
 
-#nav-drawer {
-  float: right;
-  line-height: 50px;
-}
+@media screen and (min-width: 768px) {
 
-/*チェックボックス等は非表示に*/
-.nav-unshown {
-  display:none;
-}
-
-/*アイコンのスペース*/
-#nav-open {
-  display: inline-block;
-  width: 30px;
-  height: 22px;
-  vertical-align: middle;
-}
-
-/*ハンバーガーアイコンをCSSだけで表現*/
-#nav-open span, #nav-open span:before, #nav-open span:after {
-  position: absolute;
-  height: 3px;/*線の太さ*/
-  width: 25px;/*長さ*/
-  border-radius: 3px;
-  background: #555;
-  display: block;
-  content: '';
-  cursor: pointer;
-}
-#nav-open span:before {
-  bottom: -8px;
-}
-#nav-open span:after {
-  bottom: -16px;
-}
-
-/*閉じる用の薄黒カバー*/
-#nav-close {
-  display: none;/*はじめは隠しておく*/
-  position: fixed;
-  z-index: 99;
-  top: 0;/*全体に広がるように*/
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: black;
-  opacity: 0;
-  transition: .3s ease-in-out;
-}
-
-/*中身*/
-#nav-content {
-  overflow: auto;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;/*最前面に*/
-  width: 90%;/*右側に隙間を作る（閉じるカバーを表示）*/
-  max-width: 330px;/*最大幅（調整してください）*/
-  height: 100%;
-  background: #fff;/*背景色*/
-  transition: .3s ease-in-out;/*滑らかに表示*/
-  -webkit-transform: translateX(-105%);
-  transform: translateX(-105%);/*左に隠しておく*/
-}
-
-/*チェックが入ったらもろもろ表示*/
-#nav-input:checked ~ #nav-close {
-  display: block;/*カバーを表示*/
-  opacity: .5;
-}
-
-#nav-input:checked ~ #nav-content {
-  -webkit-transform: translateX(0%);
-  transform: translateX(0%);/*中身を表示（右へスライド）*/
-  box-shadow: 6px 0 25px rgba(0,0,0,.15);
-}
-
-@media screen and (min-width:767px) {
-  #nav-open {
-    display:none;
-  }
+	.menu-box {
+		display: none;
+	}
 }
 
 
 @media screen and (max-width: 767px) {
 
 	body {
-		width: 90%;
-		margin: 0 auto;
+		width: 100%;
 	}
 
 	header {
 		height: 50px;
 	}
 
+	.menu-box {
+		float: right;
+		width: 40px;
+		height: 40px;
+		margin-right: 5%;
+		border: 1px solid #FAFAFA;
+		margin-top: 5px;
+		margin-bottom: 5px;
+	}
+
+	.list-bar:first-child {
+    margin-top: 10px;
+}
+
+	.list-bar {
+		display: block;
+		width: 25px;
+		height: 2px;
+		margin: 5px auto;
+		background-color: #FAFAFA;
+	}
+
 	.container {
 		width: 100%;
 		height: 50px;
+	}
+
+	.container3 {
+		width: 90%;
+		margin :0 auto;
 	}
 
 	.img1 {
@@ -468,7 +417,8 @@ footer {
 	}
 
 	.portfolio {
-		width: 100%;
+		width: 90%;
+		padding-bottom: 90px;
 	}
 
 	.title2 {
@@ -481,6 +431,7 @@ footer {
 
 	.color {
 		padding-bottom: 90px;
+		padding: 0 5%;
 	}
 
 
@@ -507,8 +458,10 @@ footer {
 		margin-bottom: 10px;
 	}
 
+
 	.feature {
 		width: 100%;
+		padding: 0 5%;
 	}
 
 	.strength {
@@ -536,10 +489,11 @@ footer {
 	.size {
 		width: 100%;
 		margin: 0 auto;
+		font-size: 60px;
 	}
 
 	.profile {
-		width: 100%;
+		width: 90%;
 	}
 
 	.picture {
@@ -568,12 +522,17 @@ footer {
 		text-align: center;
 	}
 
+	.text6 {
+		padding-bottom: 90px;
+	}
+
 	.MySkills {
 		text-align: center;
 	}
 
 	.contact {
 		width: 100%;
+		padding : 0 5%;
 	}
 
 	.left {
@@ -585,7 +544,11 @@ footer {
 	}
 
 	.icon {
-		padding-left: 30px;
+		padding-bottom: 90px;
+	}
+
+	.one, .two {
+		margin-right: 8px;
 	}
 
 	footer {
